<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="8dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_election_id"
            android:inputType="textVisiblePassword"
            android:hint="@string/election_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/dialog_question"
            android:inputType="textMultiLine"
            android:hint="@string/election_question"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/dialog_abb_url"
            android:inputType="textUri"
            android:hint="@string/election_abb_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/election_start_date_text"
            android:text="@string/election_start_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp" />

        <DatePicker
            android:id="@+id/dialog_start_date"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/election_start_time_text"
            android:text="@string/election_start_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TimePicker
            android:id="@+id/dialog_start_time"
            android:timePickerMode="spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/election_end_date_text"
            android:text="@string/election_end_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <DatePicker
            android:id="@+id/dialog_end_date"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/election_end_time_text"
            android:text="@string/election_end_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TimePicker
            android:id="@+id/dialog_end_time"
            android:timePickerMode="spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        </LinearLayout>

</ScrollView>