<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElectionActivity">

    <include android:id="@+id/action_toolbar" layout="@layout/toolbar" />

    <!-- Use a negative android:layout_marginTop to remove the space below the toolbar? -->
    <!-- android:layout_marginTop="-4dp" -->
    <!--android:paddingTop="0dp"-->
    <!--android:paddingBottom="0dp"-->
    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/progressbar"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        <!--android:minHeight="4dp"
        android:maxHeight="4dp" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/election_id_head"
                android:text="@string/election_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/election_id"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/election_question_head"
                android:text="@string/election_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/election_question"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/election_start_time_head"
                android:text="@string/election_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/election_start_time"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/election_end_time_head"
                android:text="@string/election_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/election_end_time"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/election_url_head"
                android:text="@string/election_abb_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <!-- Used for editing the url. -->
            <ViewSwitcher
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureAllChildren="false">

                <TextView
                    android:id="@+id/election_abb_url"
                    android:text="@string/loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/election_new_abb_url"
                    android:inputType="textUri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </ViewSwitcher>

            <TextView
                android:id="@+id/election_key_head"
                android:text="@string/election_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/election_key"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/election_bundle_head"
                android:text="@string/election_bundle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/election_bundle"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/election_button"
                android:text="@string/wait"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include layout="@layout/footer" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/fab" />

</RelativeLayout>
